--- a/my-create-app/src/css/Cabecalho.scss
+++ b/my-create-app/src/css/Cabecalho.scss
@@ -1,13 +1,13 @@
 .logout{
     padding: 10px;
-    background-color: pink;
-    font-size: 25px;
+    background-color: #74ff73;
+    font-size: 30px;
 }
 
 
 
 .cabecalho{
-    background-color: pink;
+    background-color: #74ff73;
     display: flex;
     text-align: center;
     align-items: center;
