--- a/my-create-app/src/css/Login.scss
+++ b/my-create-app/src/css/Login.scss
@@ -1,7 +1,7 @@
 .login{
     height: 800px;
     form{
-        background-color: #ffc0cb;
+        background-color: #74ff73;
         height: 400px;
         margin-top: 140px;
     }
