--- a/my-create-app/src/css/Cabecalho.scss
+++ b/my-create-app/src/css/Cabecalho.scss
@@ -1,27 +1,6 @@
 .logout{
     padding: 10px;
-    background-color: #74ff73;
+    background-color: lightgreen;
     font-size: 30px;
-}
-
-
-
-.cabecalho{
-    background-color: #74ff73;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: space-between;
     
-    h1{
-        color: black;
-        padding: 20px;
-        font-size: 30px;
-    }
-    h3{
-        color: black;
-        margin-right: 9px;
-        padding: 20px;
-        font-size: 15px;
-    }
 }
