--- a/my-create-app/src/css/Home.scss
+++ b/my-create-app/src/css/Home.scss
@@ -1,9 +1,95 @@
+@import "./variáveis";
+
+
+
+.geral{
+    background-color: lightgreen;
+}
+
+
+.cabecalho{
+    background-color: lightblue;
+    color: black;
+    text-align: center;
+}
+
+
+.container{
+    display: grid;
+    grid-template-columns: 0.5fr 1fr 1fr;
+    column-gap: 1rem;
+    background-color: lightgreen;
+
+       
+    header{
+        margin: 1em;
+        background-color:lightblue;
+        grid-column: 1 / 3;
+        width: 890px;
+        height: 300px;
+        border-radius: 4px;
+        border: 2px solid;
+    }
+
+    nav{
+        background-color:lightblue;
+        grid-row: 1 / 4;
+        grid-column: 3 / 5;
+        width: 550px;
+        border-radius: 4px;
+        border: 2px solid;
+    }
+ 
+    h1{
+        background-color: lightblue;
+        width: 300px;
+        text-align: center;
+        align-items: center;
+        display: flex;
+        border: 2px solid;
+        border-radius: 4px;
+        justify-content: center;
+    }
+
+    p{
+        font-size: 20px;
+    }
+
+
+    h2{
+        background-color: lightblue;
+        width: 570px;
+        height: 180px;
+        border-radius: 4px;
+        border: 2px solid;
+        justify-content: center;
+        text-align: center;
+        display: flex;
+        align-items: center;
+    }
+    
+    button{
+        background-color: lightgreen;
+        width: 300px;
+        border-radius: 2px;
+        grid-column: 2 / 3;
+        margin-left: 250px;
+        background-color: lightblue;
+
+        &:hover{
+            background-color: red;
+        }
+    }
+}
+
+
 
 .cards{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    background-color: lightgreen;
 }
 
 .card{
@@ -18,6 +104,7 @@
 	align-items: center;
 	justify-content: space-between;
 	text-align: center;
+    margin-bottom: 70px;
         h2{
             font-family: helvetica;
 	        font-size: 24px;
@@ -36,4 +123,12 @@
             background-color: blue;
             color: white;
         }
+}
+
+  
+.vantagens{
+    margin-top: 30px;
+    border: 2px solid;
+    text-align: center;
+    background-color: lightgreen;
 }
