--- a/my-create-app/src/css/Rodape.scss
+++ b/my-create-app/src/css/Rodape.scss
@@ -1,16 +1,21 @@
 footer {
-	background-color: #74ff73;
-	color: black;
-	padding: 20px;
-	text-align: center;
-    font-size: 20px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+}
 
-    ul{
-        list-style: none;
-        
-        li{
-            display: inline-block;
-	        margin: 0 10px;
-        }
-    }
+.footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/* Estilizando o link no rodapé (opcional) */
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
