--- a/my-create-app/src/css/Home.scss
+++ b/my-create-app/src/css/Home.scss
@@ -14,33 +14,34 @@
 }
 
 
-.container{
+.container {
     display: grid;
     grid-template-columns: 0.5fr 1fr 1fr;
     column-gap: 1rem;
     background-color: lightgreen;
 
-       
-    header{
+    & header {
         margin: 1em;
-        background-color:lightblue;
+        background-color: lightblue;
         grid-column: 1 / 3;
         width: 890px;
         height: 300px;
         border-radius: 4px;
         border: 2px solid;
+        margin-left: 50px;
     }
 
-    nav{
-        background-color:lightblue;
+    & nav {
+        background-color: lightblue;
         grid-row: 1 / 4;
         grid-column: 3 / 5;
-        width: 550px;
+        width: 300px;
         border-radius: 4px;
         border: 2px solid;
+        margin-left: 100px;
     }
- 
-    h1{
+
+    & h1 {
         background-color: lightblue;
         width: 300px;
         text-align: center;
@@ -51,12 +52,11 @@
         justify-content: center;
     }
 
-    p{
+    & p {
         font-size: 20px;
     }
 
-
-    h2{
+    & h2 {
         background-color: lightblue;
         width: 570px;
         height: 180px;
@@ -66,9 +66,10 @@
         text-align: center;
         display: flex;
         align-items: center;
+        margin-left: 50px;
     }
-    
-    button{
+
+    & button {
         background-color: lightgreen;
         width: 300px;
         border-radius: 2px;
@@ -76,53 +77,76 @@
         margin-left: 250px;
         background-color: lightblue;
 
-        &:hover{
+        &:hover {
             background-color: red;
+        }
+    }
+
+    @media only screen and (max-width: 1024px) {
+        & header,
+        & nav {
+            width: 100%;
+            grid-column: auto;
+        }
+
+        & h1,
+        & h2,
+        & button {
+            width: 100%;
+            margin-left: 0;
         }
     }
 }
 
 
-
-.cards{
+.cards {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     background-color: lightgreen;
+    flex-wrap: wrap; /* Permite que os cards quebrem para a próxima linha em telas menores */
 }
 
-.card{
+.card {
     background-color: #f2f2f2;
-	border-radius: 10px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-	padding: 20px;
-	margin: 20px;
-	width: 300px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin: 20px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
     margin-bottom: 70px;
-        h2{
-            font-family: helvetica;
-	        font-size: 24px;
-	        margin-bottom: 10px;
-        }
-        p{
-            font-family: helvetica;
-	        font-size: 18px;
-	        line-height: 1.5;
-	        margin-bottom: 20px;
-        }
-        button{
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            background-color: blue;
-            color: white;
-        }
+
+    h2 {
+        font-family: helvetica;
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    p {
+        font-family: helvetica;
+        font-size: 18px;
+        line-height: 1.5;
+        margin-bottom: 20px;
+    }
+
+    button {
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        background-color: blue;
+        color: white;
+    }
+
+    @media only screen and (max-width: 600px) {
+        width: 100%; /* Tornar os cards ocupando toda a largura em telas menores */
+        margin: 10px; /* Ajuste de margem para melhor espaçamento em telas menores */
+    }
 }
 
   
@@ -131,4 +155,9 @@
     border: 2px solid;
     text-align: center;
     background-color: lightgreen;
+}
+
+
+.marca{
+    margin-left: 50px;
 }
