--- a/my-create-app/src/css/Home.scss
+++ b/my-create-app/src/css/Home.scss
@@ -29,6 +29,10 @@
         border-radius: 4px;
         border: 2px solid;
         margin-left: 50px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
     }
 
     & nav {
@@ -121,6 +125,9 @@
     justify-content: space-between;
     text-align: center;
     margin-bottom: 70px;
+    img{
+        width: 50%;
+    }
 
     h2 {
         font-family: helvetica;
